--------------------------------------------------------------------------------
drkns 2025-09-21 18:06:25+01:00 - build 6563

1. Exception handling improvements.

--------------------------------------------------------------------------------
drkns 2025-09-21 15:41:04+01:00 - build 6562

1. gh-939: Set ECSTATE_SAVED only when the file was saved by the user.

--------------------------------------------------------------------------------
MZK 2025-09-20 15:47:03-04:00 - build 6561

1. gh-1009: gh-1010: gh-1011: An item in Find All menu can be longer than max short.

2. Refactoring.

--------------------------------------------------------------------------------
drkns 2025-09-20 19:08:13+01:00 - build 6560

1. Correction of 5137.

--------------------------------------------------------------------------------
MZK 2025-09-19 20:55:44-04:00 - build 6559

1. gh-1006: `VMenu`: Do not clear annotations if nobody asked for it.

--------------------------------------------------------------------------------
rohitab 2025-09-19 08:58:11+10:00 - build 6558

1. gh-1005: DM_LISTFINDSTRING finds incorrect items if the text contains path separators.

--------------------------------------------------------------------------------
zg 2025-09-17 17:13:29+03:00 - build 6557

1. correction 6548.1.

--------------------------------------------------------------------------------
zg 2025-09-17 13:42:01+03:00 - build 6556

1. looping when searching forward with regular expressions and whole words.

--------------------------------------------------------------------------------
drkns 2025-09-16 22:50:24+01:00 - build 6555

1. Refactoring & minor fixes.

--------------------------------------------------------------------------------
drkns 2025-09-15 17:23:53+01:00 - build 6554

1. gh-1002: No Error Message.

--------------------------------------------------------------------------------
MZK 2025-09-14 19:42:09-04:00 - build 6553
