@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+zg 2025-09-28 23:02:00+03:00 - build 6564
+
+1. Menu.GetItemExtendedData now has 1st optional parameter: dialog handle.
+
+--------------------------------------------------------------------------------
 drkns 2025-09-21 18:06:25+01:00 - build 6563
 
 1. Exception handling improvements.
